<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logopower"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTitle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/aboutclosebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>
