<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logopower"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajout_appareil"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinnerAppliance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:entries="@array/Appareil"
            android:prompt="@string/select_appliance" />

        <EditText
            android:id="@+id/editTextReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="15dp"
            android:hint="@string/reference"
            android:maxLength="10"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextWatt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"

            android:hint="@string/watt"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            android:inputType="number"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/addAppareilBtnValider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/valider"/>

        <Button
            android:id="@+id/addAppareilBtnAnnuler"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel_button"/>

    </LinearLayout>

</LinearLayout>
