<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterHabitatActivity">


    <ImageView
        android:id="@+id/textViewEventImage"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logopower" />


    <TextView
        android:id="@+id/TitleMonHabitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewEventImage"
        android:layout_marginTop="0dp"
        android:text="@string/mon_habitat"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/EtageET"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TitleMonHabitat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textColorHint="#A9A9A9"
        android:hint="@string/etage"
        android:inputType="number"/>

    <EditText
        android:id="@+id/SurfaceET"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/EtageET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColorHint="#A9A9A9"
        android:hint="@string/surface"
        android:inputType="number"/>



    <Button
        android:id="@+id/ValiderBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@id/SurfaceET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="15dp"
        android:background="@drawable/button_blue"
        android:text="@string/suivant" />

    <Button
        android:id="@+id/RetourBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@id/ValiderBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="15dp"
        android:background="@drawable/button_grey"
        android:text="@string/retour" />

</RelativeLayout>
