<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PreferencesFragment">

 <TextView
     android:id="@+id/TextNotif"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/notifications"
     android:textSize="25dp"
     android:textColor="@color/black"
     android:layout_marginLeft="25dp"
     android:layout_marginTop="30dp"/>

 <Switch
     android:id="@+id/NotifBtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/TextNotif"
     android:layout_marginTop="30dp"
     android:layout_marginLeft="60dp"/>

 <TextView
     android:id="@+id/EtatNotif"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/TextNotif"
     android:layout_marginTop="30dp"
     android:layout_marginLeft="180dp"
     android:text="@string/disable"
     android:textSize="20dp"
     android:textColor="@color/black"
     />

 <TextView
     android:id="@+id/TextLangue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/language"
     android:textSize="25dp"
     android:layout_below="@+id/NotifBtn"
     android:textColor="@color/black"
     android:layout_marginLeft="25dp"
     android:layout_marginTop="30dp"/>

 <Spinner
     android:id="@+id/languageSpinner"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:background="@drawable/custom_spinner_background"
     android:layout_below="@+id/TextLangue"
     android:layout_marginTop="30dp"
     android:layout_marginLeft="60dp"
     />

 <Button
     android:id="@+id/EnregistrerBtn"
     android:layout_width="300dp"
     android:layout_height="50dp"
     android:text="@string/save"
     android:textSize="15dp"
     android:background="@drawable/button_blue"
     android:layout_below="@+id/languageSpinner"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="60dp"/>

</RelativeLayout>
