<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:id="@+id/textViewEventImage"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logopower" />

    <TextView
        android:id="@+id/TitleForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewEventImage"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/EmailET"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TitleForgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColorHint="#A9A9A9"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/ValiderBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@id/EmailET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="15dp"
        android:background="@drawable/button_blue"
        android:text="@string/validate_button" />

    <Button
        android:id="@+id/BackLoginBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@id/ValiderBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="15dp"
        android:background="@drawable/button_grey"
        android:text="@string/back_to_login_button" />

  </RelativeLayout>