<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_logopower" />
    </LinearLayout>


    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/profil_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/border_background"
        android:layout_marginTop="220dp">

        <!-- Nom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/profil_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <!-- Prenom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/prenom_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/profil_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/profil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/profil_layout"
        android:gravity="center">

        <Button
            android:id="@+id/profil_modifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifier_profil"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/profil_deconnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deconnexion"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</FrameLayout>
