<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.ModifierProfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_logopower" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/modification_profil_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp" />

    </LinearLayout>


    <!-- Action Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/border_background"
        android:layout_marginTop="250dp">

        <!-- Nom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/modification_profil_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:inputType=""
            android:maxLength="10"
            android:textStyle="bold"
            />

        <!-- Prenom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/prenom_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/modification_profil_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:inputType=""
            android:maxLength="20"
            android:textStyle="bold"
            />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_label"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/modification_profil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/annuler_modification_profil_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_grey"/>

        <Button
            android:id="@+id/confirmer_modification_profil_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button"
            android:background="@drawable/button_blue"/>

    </LinearLayout>

</FrameLayout>
